--- a/angular/package.json
+++ b/angular/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.11.0",
     "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
+    "swiper": "^10.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -37,6 +38,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "^5.2.2"
   }
 }
